# self_healing_rpa

./: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml
bots/: base.py  registry.py
bots/_template/: __init__.py  selectors.py
bots/_template/use_cases/: exemplo_uc.py
bots/expandtesting/: __init__.py  selectors.py
bots/expandtesting/use_cases/: demo_healing_uc.py  flow_completo_uc.py  login_invalido_uc.py  login_uc.py
bots/tjms/: __init__.py  selectors.py
bots/tjms/use_cases/: consultar_processo_uc.py
docs/: instrucoes.md  manual.md
docs/skills/: boas_praticas-1.md  cache_e_memoria-8.md  cli_e_roteamento-2.md  git_e_self_healing-3.md  llm_providers-7.md  logging_tracker-4.md  observabilidade-9.md  pipeline-10.md  playwright_self_healing-5.md  rpa_development-6.md
rpa_self_healing/: __init__.py  config.py  shortcuts.py
rpa_self_healing/application/: __init__.py  flow_healer.py  healing_orchestrator.py  locator_healer.py  pipeline.py
rpa_self_healing/domain/: code_validator.py  entities.py  interfaces.py
rpa_self_healing/infrastructure/cache/: cache_stats.py  repair_cache.py
rpa_self_healing/infrastructure/driver/: context_capture.py  playwright_driver.py
rpa_self_healing/infrastructure/git/: git_service.py  selector_repository.py
rpa_self_healing/infrastructure/llm/: anthropic_provider.py  llm_router.py  ollama_provider.py  openrouter_provider.py
rpa_self_healing/infrastructure/logging/: rpa_logger.py
tests/: conftest.py
tests/unit/: test_bot_decorator.py  test_code_validator.py  test_config.py  test_flow_healer.py  test_healing_orchestrator.py  test_llm_router.py  test_locator_healer.py  test_pipeline.py  test_repair_cache.py  test_scaffold.py  test_selector_repository.py  test_shortcuts.py
